# ClashHM

./: .gitattributes  .gitignore  AGENTS.md  README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
clash/: build-profile.json5  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
clash/src/main/: module.json5
clash/src/main/cpp/: CMakeLists.txt  clash_bridge.cpp  native_core_compat.cpp  native_core_compat.h  ohos_compat_shim.cpp
clash/src/main/cpp/native-core/: libclashhm_native_core.a.part00  libclashhm_native_core.a.part01  libclashhm_native_core.a.part02  libclashhm_native_core.a.part03  native_core.h
clash/src/main/cpp/types/libclash/: index.d.ts  oh-package.json5
clash/src/main/ets/clashability/: ClashAbility.ets
clash/src/main/ets/common/: Constants.ets  HdsEffects.ets  Logger.ets
clash/src/main/ets/components/: ConnectButton.ets  LogItem.ets  ProxyGroupCard.ets  ProxyNodeItem.ets  SubscriptionCard.ets  TrafficStats.ets
clash/src/main/ets/entryability/: ClashAbilityStage.ets
clash/src/main/ets/models/: AppSettings.ets  ClashConfig.ets  LogEntry.ets  Subscription.ets  TrafficData.ets
clash/src/main/ets/pages/: HomePage.ets  Index.ets  LogPage.ets  ProxyPage.ets  SettingsPage.ets  SubscriptionPage.ets
clash/src/main/ets/services/: ClashService.ets  ConfigManager.ets  HttpClashService.ets  MockClashService.ets  NapiClashService.ets  NativeClash.ets  NativeCoreExtensionService.ets  ProxySelectionService.ets  SettingsService.ets  SubscriptionService.ets  TrafficMonitor.ets
clash/src/main/ets/types/: libclash.d.ts
clash/src/main/ets/vpnability/: ClashVpnAbility.ets
clash/src/main/resources/base/element/: color.json  string.json
clash/src/main/resources/base/profile/: main_pages.json
clash/src/main/resources/dark/element/: color.json
clash/src/main/resources/en_US/element/: string.json
clash/src/main/resources/zh_CN/element/: string.json
clash/src/ohosTest/: module.json5
docs/: extension-native-core.md  protocol-backend-roadmap.md  release-checklist.md
mihomo-bridge/: build-ohos.sh  build.sh  go.mod  main.go
native-core/: Cargo.toml  README.md  build-ohos.sh
native-core/.cargo/: config.toml.example
native-core/assets/: geosite.dat.z
native-core/src/: lib.rs  native_core.h
scripts/: generate_store_screenshots.py  install-native-core-artifact.sh  package-native-core-artifact.sh  verify-native-core-artifact.sh
